# silly-search

./: .env.example  .gitignore  langgraph.json  pyproject.toml
src/: common_tools.py  config.py  ctx.py  main.py  nodes.py  prompts.py  research_state.py  state.py  tavily_client.py  tools.py  utils.py
src/researcher/: researcher.py  researcher_state.py  researcher_tools.py  state.py  tools.py
src/supervisor/: state.py  superviser.py  supervisor.py  supervisor_state.py  supervisor_tools.py  tools.py
